--- a/st_dashboard.html
+++ b/st_dashboard.html
@@ -6,39 +6,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Dashboard</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
-        crossorigin="anonymous" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-        crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 
     <style>
-        p{
-            margin-left: 300px;
-            font-size: 20px;
-            margin-top:-22px;
-        }
-
         body {
             margin: 0;
             padding: 0;
+            background-color: burlywood;
         }
 
         .navbar {
             background-color: black;
+            margin-top: 20px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        .navbar-nav .nav-item {
+            margin-left: 30px; /* Increased space between navbar items */
         }
 
         .navbar-nav .nav-link {
             color: white;
             font-weight: 500;
+            padding-right: 20px; /* Optional: Extra padding for better spacing */
         }
 
         .navbar-brand {
             color: white;
         }
 
+        .navbar-brand:hover {
+            color: white !important;
+            text-decoration: none;
+        }
+
+        .navbar-nav {
+            margin-right: 20px;
+        }
+
         img {
             display: block;
-            margin-top:100px;
+            margin-top: 100px;
             margin-left: 300px;
             width: 300px;
             height: 300px;
@@ -57,15 +66,48 @@
                 opacity: 1;
             }
         }
-        .navbar-brand {
-  color: white !important; 
-}
 
-.navbar-brand:hover {
-  color: white!important;
-  text-decoration: none;
-}
+        .profile-info {
+            margin-left: 320px;
+            font-size: 20px;
+            margin-top: 40px;
+            font-family: monospace;
+        }
 
+        #emB {
+            background-color: red;
+            border-radius:10px;
+        }
+
+        .complaint-box {
+            position: fixed;
+            right: 50px;
+            top: 150px;
+            width: 300px;
+            padding: 30px;
+            background-color: greenyellow;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            margin-right: 90px;
+        }
+
+        .complaint-box h4 {
+            margin-bottom: 15px;
+        }
+
+        .complaint-box textarea {
+            width: 100%;
+            height: 400px;
+            resize: none;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            padding: 10px;
+        }
+
+        .complaint-box button {
+            margin-top: 10px;
+            width: 100%;
+        }
     </style>
 </head>
 
@@ -81,10 +123,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Complaint Box</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Emergency Button</a>
+                        <a class="nav-link" href="#" id="emB">Emergency Button</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">ChatBOT</a>
@@ -97,10 +136,19 @@
         </div>
     </nav>
 
-    <img src="../static/st_favicon.png" alt="Animated Image"><br><br><br>
-    <p>Name: Spandan Mondal</p><br>
-        <p>Class: 9</p><br>
-    <p>Enrolment No.: 210028</p>
+    <img src="../static/st_favicon.png" alt="Animated Image">
+
+    <div class="profile-info">
+        <p>Name: Spandan Mondal</p>
+        <p>Class: 9</p>
+        <p>Enrolment No.: 210028</p>
+    </div>
+    <div class="complaint-box">
+        <h4>Complaint Box</h4>
+        <textarea placeholder="Write your complaint here..."></textarea>
+        <button class="btn btn-primary">Send</button>
+    </div>
+
 </body>
 
 </html>
